# aws-cost-notification-tf

./: README.md
application/: requirements.txt
application/codes/: lambda_function.py
checkov-custom-checks/: .checkov.yaml  pyproject.toml
checkov-custom-checks/checks/: __init__.py  ecr_policy_data_source.py  iam_policy_data_source.py
scripts/: pre-push-checks.sh
terraform/dev/: local.tf  main.tf  provider.tf
terraform/environments/dev/: main.tf  moved.tf  terraform.tfvars  variables.tf
terraform/modules/cost-notification/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/eb-scheduler-lambda/: main.tf
terraform/prd/: local.tf
